src/objects/Independiente__c.object
<CustomObject>
    <fields>
        <fullName>Conocimiento_que_tiene_del_negocio__c</fullName>
        <label>Conocimiento que tiene del negocio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amplio</fullName>
                </value>
                <value>
                    <fullName>Medio</fullName>
                </value>
                <value>
                    <fullName>Bajo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependencia_de_proveedores_concentracion__c</fullName>
        <label>Dependencia de proveedores concentración</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alta</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diversificacion_del_ingreso_peso__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Diversificación del ingreso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ejemplos_de_progreso_del_negocio__c</fullName>
        <label>Ejemplos de progreso del negocio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estabilidad_peso__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Estabilidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estado_civil__c</fullName>
        <label>Estado civil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Soltero</fullName>
                </value>
                <value>
                    <fullName>Casado</fullName>
                </value>
                <value>
                    <fullName>Separado</fullName>
                </value>
                <value>
                    <fullName>Viudo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Genero_y_No_de_personas_a_cargo__c</fullName>
        <label>Género y No de personas a cargo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mujer con hijos</fullName>
                </value>
                <value>
                    <fullName>Mujer sin hijos</fullName>
                </value>
                <value>
                    <fullName>Hombre con hijos</fullName>
                </value>
                <value>
                    <fullName>Hombre sin hijos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gran_total__c</fullName>
        <formula>Total_habilidad_empresarial__c + Total_estabilidad__c + Total_diversificacion__c + Total_reputacion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gran total</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Habilidad_empresarial_peso__c</fullName>
        <defaultValue>50</defaultValue>
        <label>Habilidad empresarial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_de_personas_que_generan_ingresos__c</fullName>
        <label>No de personas que generan ingresos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 al 30%</fullName>
                </value>
                <value>
                    <fullName>50% al 30%</fullName>
                </value>
                <value>
                    <fullName>100% al 50%</fullName>
                </value>
                <value>
                    <fullName>&gt; 100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registro_de_compras_e_ingresos__c</fullName>
        <label>Registro de compras e ingresos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reputacion__c</fullName>
        <label>Reputación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mala reputación con vecinos</fullName>
                </value>
                <value>
                    <fullName>Mala reputación con arrendatarios</fullName>
                </value>
                <value>
                    <fullName>Mala reputación con proveedores</fullName>
                </value>
                <value>
                    <fullName>Buena reputación con vecinos</fullName>
                </value>
                <value>
                    <fullName>Buena reputación con arrendatarios</fullName>
                </value>
                <value>
                    <fullName>Buena reputación con proveedores</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reputacion_peso__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Reputación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_conocimiento_del_negocio__c</fullName>
        <formula>IF( TEXT( Conocimiento_que_tiene_del_negocio__c ) = &quot;Amplio&quot; ,15 ,IF( TEXT( Conocimiento_que_tiene_del_negocio__c ) = &quot;Medio&quot; ,9 ,0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_dependencia_proveedores__c</fullName>
        <formula>IF( TEXT(  Dependencia_de_proveedores_concentracion__c  ) = &quot;Media&quot; ,6 ,IF( TEXT(Dependencia_de_proveedores_concentracion__c  ) = &quot;Baja&quot; ,10 ,0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_ejemplos_de_progreso_del_negocio__c</fullName>
        <formula>IF( TEXT( Ejemplos_de_progreso_del_negocio__c ) = &quot;Si&quot; ,5 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_estado_civil__c</fullName>
        <formula>IF( TEXT( Estado_civil__c ) = &quot;Casado&quot; ,15, IF( TEXT(Estado_civil__c ) = &quot;Separado&quot; ,9, IF( TEXT( Estado_civil__c ) = &quot;Viudo&quot; ,12,0) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_genero_personas_a_cargo__c</fullName>
        <formula>IF( TEXT(  Genero_y_No_de_personas_a_cargo__c ) = &quot;Mujer con hijos&quot; ,15, IF( TEXT(  Genero_y_No_de_personas_a_cargo__c ) = &quot;Mujer sin hijos&quot; ,0, IF( TEXT(  Genero_y_No_de_personas_a_cargo__c ) = &quot;Hombre con hijos&quot; ,10.5,0) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_personas_que_generan_ingresos__c</fullName>
        <formula>IF( TEXT( No_de_personas_que_generan_ingresos__c ) = &quot;50% al 30%&quot; ,40, IF( TEXT( No_de_personas_que_generan_ingresos__c) = &quot;100% al 50%&quot; ,70, IF( TEXT( No_de_personas_que_generan_ingresos__c ) = &quot;&gt; 100%&quot; ,100,0) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_registro_de_compras_e_ingresos__c</fullName>
        <formula>IF(  TEXT(Registro_de_compras_e_ingresos__c) = &quot;Si&quot; ,5 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_reputacion__c</fullName>
        <formula>IF( TEXT( Reputacion__c ) = &quot;Mala reputación con vecinos&quot; ,0, IF( TEXT( Reputacion__c ) = &quot;Mala reputación con arrendatarios&quot; ,0, IF( TEXT( Reputacion__c ) = &quot;Buena reputación con vecinos&quot; ,30,IF( TEXT( Reputacion__c ) = &quot;Buena reputación con arrendatarios&quot; ,50, IF( TEXT( Reputacion__c ) = &quot;Buena reputación con proveedores&quot; ,80,0) 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_tiempo_de_operacion_del_negocio__c</fullName>
        <formula>IF( TEXT(  Tiempo_de_operacion_del_negocio__c  ) = &quot;De 2 a 3 años&quot; ,24 ,IF( TEXT( Tiempo_de_operacion_del_negocio__c ) = &quot;&gt; 3 años, &lt; 5 años&quot; ,36, IF( TEXT( Tiempo_de_operacion_del_negocio__c ) = &quot;&gt; 5 años, &lt; 10 años&quot; ,48,IF( TEXT( Tiempo_de_operacion_del_negocio__c ) = &quot;&gt; 10 años&quot; ,60,0)
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_tipo_de_local__c</fullName>
        <formula>IF( TEXT( Tipo_de_local__c ) = &quot;Propia menos de 1 año&quot; ,0, IF( TEXT( Tipo_de_local__c ) = &quot;Familiar menos de 1 año&quot; ,0, IF( TEXT( Tipo_de_local__c) = &quot;Propia 1-3 años&quot; ,32, IF( TEXT( Tipo_de_local__c ) = &quot;Familiar 1-3 años&quot; ,20, IF( TEXT( Tipo_de_local__c ) = &quot;Arriendo 1-3 años&quot; ,12, IF( TEXT( Tipo_de_local__c ) = &quot;Propia mas de 3 años&quot; ,40, IF( TEXT( Tipo_de_local__c ) = &quot;Familiar mas de 3 años&quot; ,32, IF( TEXT( Tipo_de_local__c ) = &quot;Arriendo mas de 3 años&quot; ,24,0))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_tipo_de_vivienda__c</fullName>
        <formula>IF( TEXT( Tipo_de_vivienda__c  ) = &quot;Propia menos de 1 año&quot; ,24, IF( TEXT( Tipo_de_vivienda__c ) = &quot;Familiar menos de 1 año&quot; ,0, IF( TEXT( Tipo_de_vivienda__c ) = &quot;Propia 1-3 años&quot; ,30, IF( TEXT( Tipo_de_vivienda__c ) = &quot;Familiar 1-3 años&quot; ,6, IF( TEXT( Tipo_de_vivienda__c ) = &quot;Arriendo 1-3 años&quot; ,18, IF( TEXT( Tipo_de_vivienda__c ) = &quot;Propia mas de 3 años&quot; ,30, IF( TEXT( Tipo_de_vivienda__c ) = &quot;Familiar mas de 3 años&quot; ,12, IF( TEXT( Tipo_de_vivienda__c ) = &quot;Arriendo mas de 3 años&quot; ,24,0))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_ubicacion_del_negocio__c</fullName>
        <formula>IF( TEXT( Ubicacion_del_negocio_en_zona_comercial__c ) = &quot;Si&quot; ,5 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solicitud_de_credito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitud de crédito</label>
        <referenceTo>Solicitud_de_credito__c</referenceTo>
        <relationshipLabel>Independientes</relationshipLabel>
        <relationshipName>Independientes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tiempo_de_operacion_del_negocio__c</fullName>
        <label>Tiempo de operación del negocio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Menos de 2 años</fullName>
                </value>
                <value>
                    <fullName>De 2 a 3 años</fullName>
                </value>
                <value>
                    <fullName>&gt; 3 años, &lt; 5 años</fullName>
                </value>
                <value>
                    <fullName>&gt; 5 años, &lt; 10 años</fullName>
                </value>
                <value>
                    <fullName>&gt; 10 años</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_local__c</fullName>
        <label>Tipo de local</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Propia menos de 1 año</fullName>
                </value>
                <value>
                    <fullName>Familiar menos de 1 año</fullName>
                </value>
                <value>
                    <fullName>Arriendo menos de 1 año</fullName>
                </value>
                <value>
                    <fullName>Propia 1-3 años</fullName>
                </value>
                <value>
                    <fullName>Familiar 1-3 años</fullName>
                </value>
                <value>
                    <fullName>Arriendo 1-3 años</fullName>
                </value>
                <value>
                    <fullName>Propia mas de 3 años</fullName>
                </value>
                <value>
                    <fullName>Familiar mas de 3 años</fullName>
                </value>
                <value>
                    <fullName>Arriendo mas de 3 años</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_vivienda__c</fullName>
        <label>Tipo de vivienda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Propia menos de 1 año</fullName>
                </value>
                <value>
                    <fullName>Familiar menos de 1 año</fullName>
                </value>
                <value>
                    <fullName>Arriendo menos de 1 año</fullName>
                </value>
                <value>
                    <fullName>Propia 1-3 años</fullName>
                </value>
                <value>
                    <fullName>Familiar 1-3 años</fullName>
                </value>
                <value>
                    <fullName>Arriendo 1-3 años</fullName>
                </value>
                <value>
                    <fullName>Propia mas de 3 años</fullName>
                </value>
                <value>
                    <fullName>Familiar mas de 3 años</fullName>
                </value>
                <value>
                    <fullName>Arriendo mas de 3 años</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_diversificacion__c</fullName>
        <formula>Score_personas_que_generan_ingresos__c * Diversificacion_del_ingreso_peso__c /100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_estabilidad__c</fullName>
        <formula>(Score_estado_civil__c + Score_genero_personas_a_cargo__c + Score_tipo_de_vivienda__c + Score_tipo_de_local__c) * Estabilidad_peso__c / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_habilidad_empresarial__c</fullName>
        <formula>(Score_registro_de_compras_e_ingresos__c + Score_conocimiento_del_negocio__c + Score_tiempo_de_operacion_del_negocio__c + Score_ubicacion_del_negocio__c + Score_dependencia_proveedores__c + Score_ejemplos_de_progreso_del_negocio__c ) *  Habilidad_empresarial_peso__c  / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_reputacion__c</fullName>
        <formula>Score_reputacion__c * Reputacion_peso__c /100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ubicacion_del_negocio_en_zona_comercial__c</fullName>
        <label>Ubicación del negocio en zona comercial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>